--- a/Game/imgui.ini
+++ b/Game/imgui.ini
@@ -42,5 +42,13 @@ Pos=536,139
 Size=461,844
 Collapsed=0
 
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=499,176
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
 [Docking][Data]
 
