--- a/Source/Engine.vcxproj
+++ b/Source/Engine.vcxproj
@@ -173,7 +173,7 @@
     <ClInclude Include="DebugDrawPass.h" />
     <ClInclude Include="debug_draw.hpp" />
     <ClInclude Include="Engine.h" />
-    <ClInclude Include="Exercise3Camera.h" />
+    <ClInclude Include="Exercises\Exercise4.h" />
     <ClInclude Include="Exercises\Exercise1.h" />
     <ClInclude Include="Exercises\Exercise2.h" />
     <ClInclude Include="Exercises\Exercise3.h" />
@@ -262,7 +262,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Engine.cpp" />
-    <ClCompile Include="Exercise3Camera.cpp" />
+    <ClCompile Include="Exercises\Exercise4.cpp" />
     <ClCompile Include="Exercises\Exercise1.cpp" />
     <ClCompile Include="Exercises\Exercise2.cpp" />
     <ClCompile Include="Exercises\Exercise3.cpp" />
